# demo

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  build.sh  build_wheel.sh  cmake_build.sh  setup.cfg  setup.py
cmake/: cmake_uninstall.cmake.in
examples/: basic_usage.py
src/demo/: __init__.py  algo.pyi  algoModule.c
src/demo/include/: algo.h
src/demo/math/: add.c  gcd.c  lcm.c  sub.c
src/demo/search/: __init__.py
src/demo/searching/: binary_search.c  linear_search.c
src/demo/sorting/: bubble_sort.c  quick_sort.c
study_doc/: PyArg_ParseTuple 参数格式详解.md  Python C API 引用计数.md  错误处理机制.md
tests/: test.py
