[metadata]
name = demo
version = 1.0.0
author = Your Name
author_email = your.email@example.com
description = 一个用 C 语言实现的 Python 扩展包，提供高性能的数学运算、排序算法和搜索算法
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/demo
project_urls =
    Bug Tracker = https://github.com/yourusername/demo/issues
    Documentation = https://github.com/yourusername/demo#readme
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: C
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Mathematics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
demo =
    *.pyi
    py.typed